# rodeo-app-examples

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
audio_input_demo/: CMakeLists.txt  app_main.c
env_sensor_demo/: CMakeLists.txt  app_main.c
ir_sensor_demo/: CMakeLists.txt  app_main.c
